--- a/src/components/layout/searchBar.css
+++ b/src/components/layout/searchBar.css
@@ -1,13 +1,19 @@
+.search-overlay-box{
+    position: absolute;
+    width: 97%;
+    margin: auto;
+    z-index: 2147483647;
+}
+
 #autocomplete-container{  
     height: fit-content;
     border: 0.5px solid black;
-    padding-bottom: 10px;
-    z-index: 2147483647;
+    padding-bottom: 10px;    
     padding-left: 10x;
     padding-right: 10px;
     background-color: white;
     width: 100%;
-    text-align: left;
+    text-align: left;    
 }
 
 .autocomplete-item{ 
@@ -23,7 +29,7 @@
 
 .search-bar-container .jump-autocomplete-container{
     line-height: initial;
-    height: 50px;
+    height: 50px;    
 }
 
 .jump-autocomplete-item{   
